<resources>
    <string name="app_name">Chat</string>
    <string name="home">Home</string>
    <string name="test">Test</string>
    <string name="something_went_wrong">Something went wrong!</string>
    <string name="ok">Ok</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Đăng nhập</string>
    <string name="trai_nghiem_awesome_chat">Trải nghiệm Awesome chat</string>
    <string name="email">EMAIL</string>
    <string name="password">MẬT KHẨU</string>
    <string name="forgot_password">Quên mật khẩu?</string>
    <string name="password_hint">Password</string>
    <string name="email_hint">Email</string>
    <string name="back">Back</string>
    <string name="register">Đăng ký</string>
    <string name="fullName">HỌ VÀ TÊN</string>
    <string name="full_name_hint">Họ và tên</string>
    <string name="todo">TODO</string>
</resources>