<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.register.RegisterFragment">

    <ImageButton
        android:id="@+id/btn_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/layout_24"
        android:layout_marginTop="@dimen/layout_52"
        android:backgroundTint="@color/white"
        android:contentDescription="@string/back"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/layout_52"
        android:fontFamily="@font/lato_bold"
        android:text="@string/register"
        android:textColor="@color/color_1"
        android:textSize="@dimen/text_32sp"
        app:layout_constraintStart_toStartOf="@+id/btn_back"
        app:layout_constraintTop_toBottomOf="@+id/btn_back" />

    <TextView
        android:id="@+id/txt_full_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/lato_regular"
        android:text="@string/fullName"
        android:textSize="@dimen/text_14sp"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintVertical_bias="0.1"
        app:layout_constraintBottom_toTopOf="@+id/edt_full_name"
        app:layout_constraintStart_toStartOf="@+id/btn_back"
        app:layout_constraintTop_toBottomOf="@+id/txt_register" />

    <EditText
        android:id="@+id/edt_full_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/layout_20"
        android:layout_marginEnd="@dimen/layout_24"
        android:autofillHints="Name"
        android:drawableEnd="@drawable/user"
        android:fontFamily="@font/lato_regular"
        android:hint="@string/full_name_hint"
        android:inputType="textPersonName"
        android:textColor="@color/black"
        android:textSize="@dimen/text_18sp"
        app:layout_constraintBottom_toTopOf="@+id/txt_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_full_name" />

    <TextView
        android:id="@+id/txt_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/lato_regular"
        android:text="@string/email"
        android:textSize="@dimen/text_14sp"
        android:layout_marginTop="@dimen/layout_24"
        app:layout_constraintBottom_toTopOf="@+id/edt_email"
        app:layout_constraintStart_toStartOf="@+id/btn_back"
        app:layout_constraintTop_toBottomOf="@+id/edt_full_name" />

    <EditText
        android:id="@+id/edt_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/layout_20"
        android:layout_marginEnd="@dimen/layout_24"
        android:autofillHints="Name"
        android:drawableEnd="@drawable/ic_mail2"
        android:fontFamily="@font/lato_regular"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:textColor="@color/black"
        android:textSize="@dimen/text_18sp"
        app:layout_constraintBottom_toTopOf="@+id/txt_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_email" />

    <TextView
        android:id="@+id/txt_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/lato_regular"
        android:text="@string/password"
        android:textSize="@dimen/text_14sp"
        android:layout_marginTop="@dimen/layout_24"
        app:layout_constraintBottom_toTopOf="@+id/edt_password"
        app:layout_constraintStart_toStartOf="@+id/btn_back"
        app:layout_constraintTop_toBottomOf="@+id/edt_email" />

    <EditText
        android:id="@+id/edt_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/layout_20"
        android:layout_marginEnd="@dimen/layout_24"
        android:autofillHints="Password"
        android:drawableEnd="@drawable/key1"
        android:fontFamily="@font/lato_regular"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:textSize="@dimen/text_18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_password" />

    <CheckBox
        android:id="@+id/checkbox_accept"
        android:layout_width="22dp"
        android:layout_height="22dp"
        android:button="@drawable/circular_checkbox"
        app:layout_constraintStart_toStartOf="@+id/btn_back"
        app:layout_constraintTop_toBottomOf="@+id/edt_password"
        android:layout_marginTop="@dimen/layout_20"/>

    <TextView
        android:id="@+id/text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Tôi đồng ý với các "
        android:textSize="@dimen/text_14sp"
        android:textColor="@color/gray"
        android:fontFamily="@font/lato_regular"
        app:layout_constraintStart_toEndOf="@+id/checkbox_accept"
        app:layout_constraintTop_toTopOf="@+id/checkbox_accept"
        app:layout_constraintBottom_toBottomOf="@+id/checkbox_accept"
        android:layout_marginStart="@dimen/layout_8" />

    <TextView
        android:id="@+id/text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="chính sách"
        android:textSize="@dimen/text_14sp"
        android:textColor="@color/color_1"
        android:fontFamily="@font/lato_bold"
        app:layout_constraintStart_toEndOf="@+id/text1"
        app:layout_constraintTop_toTopOf="@+id/checkbox_accept"
        app:layout_constraintBottom_toBottomOf="@+id/checkbox_accept"/>

    <TextView
        android:id="@+id/text3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=" và "
        android:textSize="@dimen/text_14sp"
        android:textColor="@color/gray"
        android:fontFamily="@font/lato_bold"
        app:layout_constraintStart_toEndOf="@+id/text2"
        app:layout_constraintTop_toTopOf="@+id/checkbox_accept"
        app:layout_constraintBottom_toBottomOf="@+id/checkbox_accept"/>

    <TextView
        android:id="@+id/text4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="điều khoản"
        android:textSize="@dimen/text_14sp"
        android:textColor="@color/color_1"
        android:fontFamily="@font/lato_bold"
        app:layout_constraintStart_toEndOf="@+id/text3"
        app:layout_constraintTop_toTopOf="@+id/checkbox_accept"
        app:layout_constraintBottom_toBottomOf="@+id/checkbox_accept"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_register"
        android:layout_width="0dp"
        android:layout_height="@dimen/layout_52"
        android:text="@string/register"
        android:textSize="@dimen/text_18sp"
        android:textColor="@color/white"
        android:fontFamily="@font/lato_bold"
        android:enabled="false"
        app:layout_constraintTop_toBottomOf="@+id/checkbox_accept"
        app:layout_constraintStart_toStartOf="@+id/edt_password"
        app:layout_constraintEnd_toEndOf="@id/edt_password"
        android:layout_marginTop="@dimen/layout_52"
        android:background="@drawable/corner_button" />

    <TextView
        android:id="@+id/txt_have_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Đã có tài khoản?"
        android:textSize="@dimen/text_14sp"
        android:fontFamily="@font/lato_regular"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/txt_login"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="@dimen/layout_24" />

    <TextView
        android:id="@+id/txt_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=" Đăng nhập ngay"
        android:textSize="@dimen/text_14sp"
        android:textColor="@color/color_1"
        android:fontFamily="@font/lato_bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txt_have_account"
        app:layout_constraintTop_toTopOf="@+id/txt_have_account" />


</androidx.constraintlayout.widget.ConstraintLayout>